refactoring of classes and architecture

--- a/src/main/res/layout/custom_button.xml
+++ b/src/main/res/layout/custom_button.xml
@@ -5,13 +5,14 @@
     android:layout_height="48dp"
     android:background="@null">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        style="@style/ButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:textColor="@color/black"
+        android:background="@null"
+        android:gravity="center"
+        android:textAllCaps="false"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
