--- a/src/main/res/layout/order_item_view.xml
+++ b/src/main/res/layout/order_item_view.xml
@@ -13,7 +13,7 @@
         android:background="@color/white">
 
         <TextView
-            android:id="@+id/txt_client_name"
+            android:id="@+id/txt_title"
             style="@style/LabelStyle"
             android:layout_width="wrap_content"
             android:layout_marginStart="5dp"
@@ -25,14 +25,14 @@
             tools:text="Valdenir Severino" />
 
         <TextView
-            android:id="@+id/txt_district"
+            android:id="@+id/txt_subtitle"
             style="@style/LabelStyle"
             android:layout_width="wrap_content"
             android:layout_marginStart="5dp"
             android:padding="5dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_client_name"
+            app:layout_constraintTop_toBottomOf="@+id/txt_title"
             tools:text="São Gerardo" />
 
         <TextView
