--- a/src/main/res/layout/custom_list_component.xml
+++ b/src/main/res/layout/custom_list_component.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:padding="5dp">
+    android:background="@color/white">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tbl_options"
@@ -16,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tabSelectedTextColor="@color/blue"
         app:tabTextAppearance="@style/TabTextAppearance"
-        app:tabTextColor="@color/black" />
+        app:tabTextColor="@color/black"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/txt_list_empty"
@@ -34,7 +34,7 @@
         android:id="@+id/rcv_items"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingVertical="20dp"
+        android:layout_marginTop="5dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
