--- a/src/main/res/layout/custom_loading_layout.xml
+++ b/src/main/res/layout/custom_loading_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/app_background_gradient">
 
-    <com.vald3nir.toolkit.componets.customviews.CustomImageView
+    <com.vald3nir.toolkit.core.componets.customviews.CustomImageView
         android:id="@+id/imv_logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
