--- a/src/main/res/layout/custom_list_component.xml
+++ b/src/main/res/layout/custom_list_component.xml
@@ -9,6 +9,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tbl_options"
         style="@style/TabTextStyle"
+        android:layout_marginHorizontal="15dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,17 +31,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbl_options" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_items"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_margin="15dp"
+        app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbl_options"
-        tools:itemCount="4"
-        tools:listitem="@layout/order_item_view" />
+        app:layout_constraintTop_toBottomOf="@+id/tbl_options">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="4"
+            tools:listitem="@layout/order_item_view" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
