--- a/src/main/res/layout/custom_list_component.xml
+++ b/src/main/res/layout/custom_list_component.xml
@@ -9,7 +9,6 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tbl_options"
         style="@style/TabTextStyle"
-        android:layout_marginHorizontal="15dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,8 @@
         android:id="@+id/card_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="15dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="15dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
