--- a/core-ui/src/main/res/layout/custom_spinner_item.xml
+++ b/core-ui/src/main/res/layout/custom_spinner_item.xml
@@ -9,4 +9,5 @@
     android:gravity="center"
     android:singleLine="true"
     android:textAlignment="inherit"
+    android:textColor="@color/black"
     tools:text="@string/item_menu" />
